--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,27 @@ virtualenv
 pyspark==2.4.4
 absl-py==0.8.0
 alembic==1.2.1
+altair
+argparse
 asn1crypto==0.24.0
 astor==0.8.0
 attrs==19.2.0
 backcall==0.1.0
 bleach==3.1.0
+bokeh
+boto3
+catboost
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 cloudpickle==1.2.2
 configparser==4.0.2
 cycler==0.10.0
+cython
+dash
+dash-core-components
+dash-html-components
+dask
 databricks-cli==0.9.0
 decorator==4.4.0
 defusedxml==0.6.0
@@ -21,17 +31,26 @@ dill==0.3.1.1
 docker==4.1.0
 entrypoints==0.3
 enum34==1.1.6
+featuretools
+fklearn
 Flask==1.1.1
 future==0.18.0
 gast==0.2.2
 gitdb2==2.0.6
 GitPython==3.0.3
 google-pasta==0.1.7
-googleapis-common-protos==1.6.0
+google-api-core
+google-auth
+google-auth-oauthlib
+google-cloud-core
+google-cloud-storage
+google-resumable-media
+googleapis-common-protos
 gorilla==0.3.0
 grpcio==1.24.0
 gunicorn==19.9.0
 h5py==2.10.0
+imbalanced-learn
 idna==2.6
 ipykernel==5.1.2
 ipython==7.8.0
@@ -40,6 +59,7 @@ ipywidgets==7.5.1
 itsdangerous==1.1.0
 jedi==0.15.1
 Jinja2==2.10.1
+joblib
 jsonschema==3.0.2
 jupyter==1.0.0
 jupyter-client==5.3.3
@@ -51,30 +71,39 @@ Keras-Preprocessing==1.1.0
 keyring==10.6.0
 keyrings.alt==3.0
 kiwisolver==1.1.0
+lightgbm
 Mako==1.1.0
 Markdown==3.1.1
 MarkupSafe==1.1.1
 matplotlib==3.1.1
+matplotlib-venn
 mistune==0.8.4
 mlflow==1.3.0
 nbconvert==5.6.0
 nbformat==4.4.0
+nltk
+numba
 notebook==6.0.1
 numpy==1.17.2
 opt-einsum==3.1.0
+opencv-python
 pandas==0.25.1
 pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
 Pillow==6.2.0
+plotly
 prometheus-client==0.7.1
 promise==2.2.1
 prompt-toolkit==2.0.9
 protobuf==3.9.2
 psutil==5.6.3
 ptyprocess==0.6.0
+pymc3
+pyarrow
 Pygments==2.4.2
+pyodbc
 pyparsing==2.4.2
 pyrsistent==0.15.4
 python-dateutil==2.8.0
@@ -85,6 +114,8 @@ pyzmq==18.1.0
 qtconsole==4.5.5
 querystring-parser==1.2.4
 requests==2.22.0
+s3fs
+scikit-plot
 scipy==1.3.1
 SecretStorage==2.3.1
 Send2Trash==1.5.0
@@ -105,6 +136,8 @@ testpath==0.4.2
 tornado==6.0.3
 tqdm==4.36.1
 traitlets==4.3.2
+twine
+xgboost
 urllib3==1.25.6
 wcwidth==0.1.7
 webencodings==0.5.1
